@@ -122,13 +122,13 @@ bool map_enum_do(const struct enum_map_entry *map, size_t map_size, int *value, 
 	_(VIEW_COLUMN, TEXT)
 
 #define REFERENCE_ENUM(_) \
+	_(REFERENCE, HEAD), \
+	_(REFERENCE, BRANCH), \
+	_(REFERENCE, TRACKED_REMOTE), \
+	_(REFERENCE, REMOTE), \
 	_(REFERENCE, TAG), \
 	_(REFERENCE, LOCAL_TAG), \
-	_(REFERENCE, HEAD), \
 	_(REFERENCE, REPLACE), \
-	_(REFERENCE, REMOTE), \
-	_(REFERENCE, TRACKED_REMOTE), \
-	_(REFERENCE, BRANCH), \
 
 #define ENUM_INFO(_) \
 	_(author, AUTHOR_ENUM) \
